create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1756,6 +1756,44 @@ body {
 .cid-qTkA127IK8 {
   background-image: url("../../../assets/images/jumbotron.jpg");
 }
+.cid-r0sNFCEo1T {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-r0sNFCEo1T .pricing {
+  padding: 3.3rem;
+  color: #767676;
+  background-color: #fff;
+}
+@media (max-width: 767px) {
+  .cid-r0sNFCEo1T .pricing {
+    padding: 1.5rem;
+  }
+}
+.cid-r0sNFCEo1T .plan-header,
+.cid-r0sNFCEo1T .plan-body {
+  background-color: #fff;
+}
+.cid-r0sNFCEo1T .plan-title {
+  margin-top: 1.4rem;
+}
+.cid-r0sNFCEo1T .price-figure {
+  font-weight: 700;
+  color: #232323;
+}
+@media (max-width: 550px) {
+  .cid-r0sNFCEo1T .price-figure {
+    font-size: 4.25rem;
+  }
+}
+.cid-r0sNFCEo1T .price-value {
+  font-weight: 700;
+  vertical-align: top;
+}
+.cid-r0sNFCEo1T hr {
+  margin: 2rem 0;
+}
 .cid-qTkAaeaxX5 {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -1821,5 +1859,157 @@ body {
   .cid-qTkAaeaxX5 .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
+  }
+}
+.cid-r0sNcDhqVd {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-r0sNcDhqVd .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-r0sNcDhqVd .media-container-row {
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.cid-r0sNcDhqVd .mbr-text {
+  color: #767676;
+}
+.cid-r0sNcDhqVd .mbr-author-desc {
+  display: block;
+  color: #767676;
+}
+.cid-r0sNcDhqVd .mbr-author-name {
+  color: #767676;
+}
+.cid-r0sNcDhqVd .mbr-testimonial .panel-item {
+  background-color: #ffffff;
+}
+.cid-r0sNcDhqVd .mbr-testimonial .card-block {
+  -webkit-flex-grow: 0;
+  flex-grow: 0;
+  padding: 2.4rem 2.4rem 0 2.4rem;
+}
+.cid-r0sNcDhqVd .mbr-testimonial .card-block .testimonial-photo {
+  display: inline-block;
+  width: 120px;
+  height: 120px;
+  margin-bottom: 1.6rem;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.cid-r0sNcDhqVd .mbr-testimonial .card-block .testimonial-photo img {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+.cid-r0sNcDhqVd .mbr-testimonial .card-footer {
+  padding-bottom: 2.4rem;
+  border-top: 0;
+  padding-top: 1rem;
+  word-wrap: break-word;
+  word-break: break-word;
+  background: none;
+}
+@media (max-width: 300px) {
+  .cid-r0sNcDhqVd .testimonial-photo {
+    width: 100% !important;
+    height: auto !important;
+  }
+}
+.cid-r0sNajn8H8 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-r0sNajn8H8 .mbr-iconfont {
+  font-size: 48px;
+  padding-right: 1rem;
+}
+.cid-r0sNajn8H8 .input {
+  margin-bottom: 15px;
+}
+.cid-r0sNajn8H8 .map {
+  width: 100%;
+  height: 30rem;
+}
+.cid-r0sNajn8H8 .map iframe {
+  width: inherit;
+  height: 100%;
+}
+.cid-r0sNajn8H8 .icon-block {
+  margin-bottom: 10px;
+  display: -webkit-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-r0sNajn8H8 .icon-block .icon-block__icon {
+  display: inline-block;
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+}
+.cid-r0sNajn8H8 .icon-block .icon-block__title {
+  display: inline-block;
+  align-self: center;
+  -webkit-align-self: center;
+  margin-bottom: 0;
+  line-height: 1;
+  font-style: italic;
+}
+.cid-r0sNajn8H8 .mbr-text {
+  color: #767676;
+}
+.cid-r0sNajn8H8 a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-r0sNajn8H8 .multi-horizontal {
+  flex-grow: 1;
+  -webkit-flex-grow: 1;
+  max-width: 100%;
+}
+.cid-r0sNajn8H8 .input-group-btn {
+  display: block;
+  text-align: center;
+}
+.cid-r0sNajn8H8 .google-map {
+  height: 25rem;
+  position: relative;
+}
+.cid-r0sNajn8H8 .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-r0sNajn8H8 .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-r0sNajn8H8 .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-r0sNajn8H8 .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
+@media (max-width: 767px) {
+  .cid-r0sNajn8H8 h2 {
+    padding-top: 2rem;
+  }
+}
+@media (min-width: 768px) {
+  .cid-r0sNajn8H8 .container > .row > .col-md-6:first-child {
+    padding-right: 30px;
+  }
+  .cid-r0sNajn8H8 .container > .row > .col-md-6:last-child {
+    padding-left: 30px;
   }
 }
